cs3310/Assignment 2/submission/test/pass/Test_5.java
class Test5{
    public static void main(String[] a){
        System.out.println(1);
    }
}


class Finder {
    public int Find(int a,int num){
        if((a<num)&(num<a)){
	}
	else
	{
	}
	return 0;
    }
}
